--- a/Arduino/nav_ttgo_pio/platformio.ini
+++ b/Arduino/nav_ttgo_pio/platformio.ini
@@ -8,11 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ttgo-t1]
+[env]
 platform = espressif32
 board = ttgo-t1
-framework = arduino
-lib_deps = bodmer/TFT_eSPI@^2.2.19
+framework = arduino, espidf
+lib_deps = 
+	bodmer/TFT_eSPI@^2.3.4
+platform_packages = 
+	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#idf-release/v4.0
 monitor_speed = 115200
-
 upload_speed = 921600
+build_flags = -DARDUINO_ARCH_ESP32 -DESP32 -g
+
+[env:ttgo-t1]
+board = ttgo-t1
